@@ -91,8 +91,8 @@ sub remove_cookie {
     );
 
     $r->err_headers_out->add("Set-Cookie" => "$str");
-    $r->log_error("removed_cookie " . $r->err_headers_out->get("Set-Cookie"))
-        if $debug >= 2;
+
+    $r->log_error("removed cookie $cookie_name") if $debug >= 2;
 }
 
 # convert current request to GET
